@@ -1,58 +1,60 @@
 package be.pxl.services.services;
 
-import be.pxl.services.client.EmployeeFeignClient;
 import be.pxl.services.domain.Department;
-import be.pxl.services.dto.DepartmentWithEmployeesDTO;
-import be.pxl.services.dto.EmployeeDto;
+import be.pxl.services.domain.dto.DepartmentRequest;
+import be.pxl.services.domain.dto.DepartmentResponse;
 import be.pxl.services.repository.DepartmentRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class DepartmentService implements IDepartmentService {
     private final DepartmentRepository departmentRepository;
-    private final EmployeeFeignClient employeeFeignClient;
 
     @Override
-    public Department addDepartment(Department department) {
-        return departmentRepository.save(department);
+    public void addDepartment(DepartmentRequest departmentRequest) {
+        Department department = Department.builder()
+                .name(departmentRequest.getName())
+                .organizationId(departmentRequest.getOrganizationId())
+                .position(departmentRequest.getPosition())
+                .employees(departmentRequest.getEmployees())
+                .build();
+        departmentRepository.save(department);
     }
 
     @Override
-    public Department getDepartmentById(Long id) {
-        return departmentRepository.findById(id)
+    public DepartmentResponse getDepartmentById(Long id) {
+        Department department = departmentRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Department not found with id: " + id));
+        return mapToDepartmentResponse(department);
+    }
+    private DepartmentResponse mapToDepartmentResponse(Department department) {
+        return DepartmentResponse.builder()
+                .organizationId(department.getOrganizationId())
+                .name(department.getName())
+                .position(department.getPosition())
+                .employees(department.getEmployees())
+                .build();
     }
 
     @Override
-    public List<Department> getAllDepartments() {
-        return departmentRepository.findAll();
+    public List<DepartmentResponse> getAllDepartments() {
+        List<Department> departments = departmentRepository.findAll();
+        return departments.stream().map(this::mapToDepartmentResponse).toList();
     }
 
     @Override
-    public List<Department> getDepartmentsByOrganization(Long organizationId) {
-        return departmentRepository.findByOrganizationId(organizationId);
-    }
-
-    @Override
-    public List<DepartmentWithEmployeesDTO> getDepartmentsWithEmployeesByOrganization(Long organizationId) {
+    public List<DepartmentResponse> getDepartmentsByOrganization(Long organizationId) {
         List<Department> departments = departmentRepository.findByOrganizationId(organizationId);
+        return departments.stream().map(this::mapToDepartmentResponse).toList();
+    }
 
-        return departments.stream()
-                .map(department -> {
-                    List<EmployeeDto> employees = employeeFeignClient.getEmployeesByDepartment(department.getId());
-
-                    return DepartmentWithEmployeesDTO.builder()
-                            .id(department.getId())
-                            .organizationId(department.getOrganizationId())
-                            .name(department.getName())
-                            .employees(employees)
-                            .build();
-                })
-                .collect(Collectors.toList());
+    @Override
+    public List<DepartmentResponse> getDepartmentsWithEmployeesByOrganization(Long organizationId) {
+        List<Department> departments = departmentRepository.findByOrganizationId(organizationId);
+        List<Department> departmentsWithEmployees = departments.stream().filter(d -> d.getEmployees().toArray().length != 0).toList();
+        return departmentsWithEmployees.stream().map(this::mapToDepartmentResponse).toList();
     }
 }
